# hf-browser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/hf_browser/: __init__.py  __main__.py
