[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-browser"
dynamic = ["version"]
description = "A tiny zero-dependency TUI to browse Hugging Face models"
readme = "README.md"
license = "MIT"
authors = [{ name = "Thomas Ezan", email = "thomas.ezan@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["windows-curses; sys_platform == 'win32'"]
keywords = ["huggingface", "tui", "terminal", "models", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/lethargicpanda/hf-browser"
Issues = "https://github.com/lethargicpanda/hf-browser/issues"

[project.scripts]
hf-browser = "hf_browser:main"

[tool.hatch.version]
path = "src/hf_browser/__init__.py"
